--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ html_template = """
 </head>
 <body>
     <div class="container">
-        <img src="https://via.placeholder.com/150" alt="Foto Profil" class="profile-pic">
+        <img src="https://p16-sign-va.tiktokcdn.com/tos-maliva-avt-0068/694ed585f29849ecfbd829c4f83b60f3~tplv-tiktokx-cropcenter:1080:1080.jpeg?dr=14579&refresh_token=d491ca0b&x-expires=1746068400&x-signature=Q0Qsok2qGnAOqAAprGKVG3IUkPA%3D&t=4d5b0474&ps=13740610&shp=a5d48078&shcp=81f88b70&idc=my" alt="Foto Profil" class="profile-pic">
         <h1>Nama Kamu</h1>
         <p>Ini deskripsi singkat tentang kamu. Bisa isi profesi, minat, atau hobi.</p>
         <div class="socials">
